@@ -1,6 +1,8 @@
 
 VERSION = 0.6.3
 
+	* new MotherManager family functions: actionMany...
+	* new MotherManger method: insertManyChildren
 	* new class MotherMany
 	* abdbda imports (and exports) multiple query methods
 	* sqlite and postgres have now mq_query and mg_query
